- Rendering of the icon in the title bar of the main window has been
  fixed in Microsoft Windows.

v1.5
- Fixed dead link in "About" dialog
- Upgraded dependencies

v1.4
- Menu "Main > Statistics" has been introduced
- About dialog now shows the Resoday logo
- UI for crash handler has been improved

v1.3
- Custom data directory setting has been introduced
- Simple crash handler has been introduced

v1.2
- Java 17 is now required to run Resoday
- Menu "Help > Help" has been introduced
- Horizontal layout has been introduced

v1.1
Bugfixes
- "About" dialog now has a better default size on vertical monitors.
- Sounds of button toggles used to multiply after using the "Reorder habits"
  dialog, which has been corrected.

Features
- Layout of buttons can now be changed from the new "Settings > Calendar layout"
  menu.